# diploma_work

./: CMakeLists.txt  README.md  SimplePythonServer.py  main.cpp
cgi-bin/functionsAnswers/: compositeFunction  floatFunction
headers/: Config.cmake  HttpPost.h  MainFunctions.h  MyTypes.h  PayloadMaker.h  ToString.h  WriteCallback.h
sources/: Config.cmake  HttpPost.cpp  MainFunctions.cpp  PayloadMaker.cpp  WriteCallback.cpp  base64.cpp
